--- a/rpc-client/pom.xml
+++ b/rpc-client/pom.xml
@@ -11,5 +11,16 @@
 
     <artifactId>rpc-client</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.fq.rpc</groupId>
+            <artifactId>rpc-commom</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.34.Final</version>
+        </dependency>
+    </dependencies>
 </project>
