--- a/rpc-example/pom.xml
+++ b/rpc-example/pom.xml
@@ -9,27 +9,17 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rpc-client</artifactId>
+    <artifactId>rpc-example</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.fq.rpc</groupId>
-            <artifactId>rpc-commom</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.34.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fq.rpc</groupId>
-            <artifactId>rpc-registry</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fq.rpc</groupId>
             <artifactId>rpc-server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fq.rpc</groupId>
+            <artifactId>rpc-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
